--- a/dada/extras/documentation/pod_source/changes_5_x.pod
+++ b/dada/extras/documentation/pod_source/changes_5_x.pod
@@ -6,7 +6,7 @@
 
 =head2 Summary 5.1.0 
 
-This release of Dada Mail contains a wealth of new features, plugins and bug fixes. v5.1.0 is a very major release of Dada Mail.
+This release of Dada Mail contains a wealth of new features, plugins and bug fixes. v5.1.0 is a B<very major release of Dada Mail>.
 
 If upgrading from any previous version of Dada Mail, we highly suggest B<Creating a new .dada_config file>, when using the included Dada Mail installer, as many items in the starter C<.dada_config> file has now changed. 
 
@@ -18,64 +18,32 @@ You now have the ability to update a subscriber's email address, through the Lis
 
 Individual subscribers have had the ability to update their email address, using Dada Mail's B<Profiles>, but the List Owner has never had the ability to do this on-behalf of their subscribers. This new feature fixes this hole in Dada Mail's functionality. 
 
-You can now updat an email address on your current mailing list, or 
-on every mailing list.  
+You can now update an email address on your current mailing list, or 
+on every mailing list (if logged in with the Dada Mail Root Password).  
 
-Profile information is also updated with the new email address, or copied over, if a Profile for the updated email address already exists. A lot of work has been done to make sure you do not lose Profile information. 
-
-=head3 New Plugin: Change List Shortname
-
-Each Dada Mail mailing list has a, B<List Shortname> - the internal name used by Dada Mail to differentiate mailing lists from one another. The list shortname is also used for values in subscription forms and subscripiton/unsubscription/confirmation links. Sometimes it's desired to change this list shortname. 
-
-This plugin now gives you that ability. 
-
-See the docs on the plugin for more information: 
-
-L<http://dadamailproject.com/d/change_list_shortname.cgi.html>
-
-=head3 New Plugin: Password Protected Directories
-
-Dada Mail's mailing lists, along with each addresses Profile holds valuable information that can be repurposed for various tasks. 
-
-This plugin allows you to password protect a directory, only allowing your mailing list subscribers access, using their subscription to your mailing list and their Dada Mail Profile password as credentials. 
-
-See the docs on the plugin for more information: 
-
-L<http://dadamailproject.com/d/password_protect_directories.cgi.html>
-
-This feature was commissioned by Jeff Berger for "Websites That Work" -- L<http://www.websitesthatworkusa.com>.
-
-
-=head3 New Plugin: Default Mass Mailing Messages
-
-Having default copy available, in the PlainText and/or HTML Versions of your mailing list messages, ready to be used as a starter for your next mailing list message would be convenient. 
-
-This plugin allows you to set that default copy for your Mailing List Messages, that will appear in your B<Send a Message>, 
-B<Send a Webpage> screens, as well as in B<Beatitude>.
-
-See the docs on the plugin for more information: 
-
-L<http://dadamailproject.com/d/default_mass_mailing_messages.cgi>
+Profile information is also updated with the new email address, or copied over, if a Profile for the updated email address already exists. A lot of work has been done to make sure you do not lose any Profile information. 
 
 =head3 Send a Message Screen: Show/Hide PlainText/HTML Versions
 
 You may now set which Mailing List Message Version textboxes are visible by default, in the, B<Your List Control Panel E<gt>E<gt> Options> screen. 
 
-For example, this becomes useful if you send primarily HTML messages, you have one of the support WYSIWYG editors installed and are using the new B<Mass Mailing Messages> plugin to set default copy to edit within the WYSIWYG editor. 
+This becomes useful if you send primarily HTML messages, you have one of the support WYSIWYG editors installed and are using the new B<Mass Mailing Messages> plugin to set default copy to edit within the WYSIWYG editor. 
 
 =head3 Amazon SES: Auto-Adjusting Batch Settings
 
-Amazon SES is a powerful third-part mailing service that allows you to have a mailing list on a relatively cheap hosting account, without having to deal with or worry about the sometimes lacking hourly email quotas allowed. 
+The Amazon SES is a powerful third-part mailing service that allows you run a mailing list with a large subscruber base, on a relatively cheap hosting account, without having to deal with or worry about the sometimes lacking hourly email quotas allowed. Sending to >10,000 addresses becomes unrealistic to many people, if you can only send messages at a rate, at most, of 500 messages every hour. Switching sending to Amazon SES allows one to keep their hosting account and Dada Mail installation the same, with only mail sending changing. 
 
-The problem with Amazon SES is that the mailing sending quotas may start off small, but then grow depending on your usage of the service. Keeping current on this changing quota is an annoyance, especially when the quota is temporarily small and sending must be done slowly. 
+The problem with Amazon SES is that the mailing sending quotas may start off small, but then grow depending on your usage of the service. Keeping current on this changing quota is an annoyance, especially when the quota is temporarily small when starting out with the server, and sending must be done slowly. 
 
-Now built into Dada Mail is the ability to automatically set the optimal batch settings needed for Amazon SES sending. You may now simply let Dada Mail figure out what is the most optimal batch setting for your mailing list. This feature works with either the SES API or using the SES SMTP interface. 
+Now built into Dada Mail is the ability to I<automatically> set the optimal batch settings needed for Amazon SES sending. You may now simply let Dada Mail figure out what is the most optimal batch setting for your mailing list. This feature works with either the SES API or using the SES SMTP interface and works no matter how many mass mailings you allow to go out at one time. The automatic batch setting is dynamic, and will make sure you're sending speeds don't go over what your sending quota is set to. 
 
 =head3 Profiles
 
+Much work has been done to Dada Mail Profiles to make them more flexible towards customization, as well as making it easier for List Owners to administrate individual user's Profile information. 
+
 =head4 Profile Passwords  in the List Control Panel
 
-List Owners now how the option to reset a user's Profile Password in the List Control Panel, under: B<Membership E<gt>E<gt> View> (then, select a member of your mailing list)
+List Owners now how the option to reset a user's Profile Password in the List Control Panel, under: B<Membership E<gt>E<gt> View> (then, select a member of your mailing list). Password may not be simply retrieved, since they are saved in a one-way encryption, but can still be reset. 
 
 =head4 Email Notifications of Changed Profile Email Addresses
 
@@ -99,17 +67,50 @@ For more information about this feature, see:
 
 L<http://dadamailproject.com/d/features-profiles.pod.html#subscription_check_skip>
 
-=head3 List Invitations: Already Been Invited Check
-
-List Invitations are a powerful tool in Dada Mail, as they allow you to invite a new member to join your mailing list, and thus allowing the potential member themselves to make a decision on whether they would like to join, or not. 
-
-It becomes a hassle, though, the more you use this feature, as it's difficult to keep track of who you've already invited. Constantly asking someone to join your mailing list is not the type of behaviour we suggest. 
-
-Before you send a List Invitation, you may now have checks done to see if the addresses you want to invite haven't already been invited in the past, saving you from pestering potential members.
-
-=head3 Enable/Disable Major Profile Features
+=head4 Enable/Disable Major Profile Features
 
 You now have the option to enable and disable major features of Dada Mail Profiles, including user login, user registration, user Profile password reset, etc. 
+
+=head3 List Invitations: Already Been Invited Check
+
+List Invitations are a powerful tool in Dada Mail, as they allow you to invite a new member to join your mailing list, and thus allow potential new members to make their own  decision on whether they would like to join your mailing list.
+
+Invitatons become a hassle, ironically, the more you use this feature, as it's difficult to keep track of who it is that you've already invited. Constantly asking someone to join your mailing list is not the type of behaviour we suggest. 
+
+Before a List Invitation is sent, Dada Mail can now double-check to see if any invitees have already been sent a list invitation, saving you from pestering potential members. This new feature is optional and can be configured to simply warn you about previous invites, allowing you to re-invite selected addresses, or disallow to send to any previous invited addresses. By default, Dada Mail will warn about previous invites, but won't disallow you from inviting them, again. 
+
+=head3 New Plugin: Change List Shortname
+
+Each Dada Mail mailing list has a, B<List Shortname> - the internal name used by Dada Mail to differentiate mailing lists from one another. The list shortname is also used for values in subscription forms and subscripiton/unsubscription/confirmation links. Sometimes it's desired to change this list shortname. 
+
+This plugin now gives you that ability. 
+
+See the docs on the plugin for more information: 
+
+L<http://dadamailproject.com/d/change_list_shortname.cgi.html>
+
+=head3 New Plugin: Password Protect Directories
+
+Dada Mail's mailing lists, along with each addresses Profile holds valuable information that can be repurposed for various tasks. 
+
+This plugin allows you to password protect a directory, only allowing your mailing list subscribers access, using their subscription to your mailing list and their Dada Mail Profile password as credentials. A default password may be set, if a subscriber does not currently have a Dada Mail Profile. 
+
+See the docs on the plugin for more information: 
+
+L<http://dadamailproject.com/d/password_protect_directories.cgi.html>
+
+This feature was commissioned by Jeff Berger for "Websites That Work" -- L<http://www.websitesthatworkusa.com>.
+
+=head3 New Plugin: Default Mass Mailing Messages
+
+Having default copy available, in the PlainText and/or HTML Versions of your mailing list messages, ready to be used as a starter for your next mailing list message would be convenient. 
+
+This plugin allows you to set that default copy for your Mailing List Messages, that will then appear in your B<Send a Message>, 
+B<Send a Webpage> screens, as well as in B<Beatitude>.
+
+See the docs on the plugin for more information: 
+
+L<http://dadamailproject.com/d/default_mass_mailing_messages.cgi>
 
 =head2 Changes 5.1.0 
 
@@ -141,7 +142,7 @@ This includes reports sent from Amazon SES.
 
 =head3 multi_admin_subscribers.cgi Plugin: REMOVED
 
-The C<multi_admin_subscribers.cgi> plugin, labeled as B<DEPRECATED> has now been permanently removed from the Dada Mail distribution. Similar functionality is  allowed using the, B<Update Email Address> feature. 
+The C<multi_admin_subscribers.cgi> plugin, labeled as B<DEPRECATED> has now been permanently B<removed> from the Dada Mail distribution. Similar functionality is allowed using the, B<Update Email Address> feature. 
 
 =head2 Bugfixes 5.1.0
 
