--- a/dada/extras/documentation/pod_source/FAQ-general.pod
+++ b/dada/extras/documentation/pod_source/FAQ-general.pod
@@ -405,9 +405,8 @@ In the list control panel, go to, B<Send a Message>. Twiddle the B<HTML Version>
 
 B<+/- HTML Version> 
 
-If you do not know HTML, or are setting Dada Mail up for someone who does not know HTML, but want to create HTML images, you can transform this textarea into a WYSIWYG HTML editor by installing FCKeditor (which is relatively painless). Directions on how to do so are at: 
+If you do not know HTML, or are setting Dada Mail up for someone who does not know HTML, but want to create HTML images, you can transform this textarea into a WYSIWYG HTML editor.
 
-http://dadamailproject.com/support/documentation/Config.pm.html#fckeditor_integration___fckeditor_url
 
 =item * The, "Send a Webpage" screen
 
@@ -448,186 +447,6 @@ In the list control panel, go to, <Send a Webpage>. Under, B<HTML Version (Your 
 B<NOTE:> Before being sent, all HTML messages will be changed to a multipart/alternative message and have a PlainText version of your message created, if one is not present already. This is absolutely required these days and there is currently no way to turn off this behavior in Dada Mail.
 
 =back
-
-=head2 How do I get the File Browser working in FCKeditor? 
-
-=head3 Screen Casts! 
-
-I<I want to upload images to then put in my message - any help on that?>
-
-These screencasts: 
-
-http://www.youtube.com/watch?v=AgNTNygI4MM&hd=1
-
-http://www.youtube.com/watch?v=uRdDOO5n_Cc&hd=1
-
-Goes through the below process. 
-
-These current directions are for FCKeditor, version B<2.6>. The steps involved seem to always change in each revision of FCKeditor. 
-
-=head3 Step 1: Install FCKEditor
-
-First, get FCKeditor up and running: 
-
-L<http://dadamailproject.com/support/documentation/Config.pm.html#fckeditor_integration___fckeditor_url>
-
-In a nutshell, this means downloading FCKeditor, and putting the, B<fckeditor> directory onto your website. 
-
-Once that's accomplished, you'll want to set Dada Mail's Config.pm variable, C<$FCKEDITOR_URL> to point to the location of the fckeditor directory. Once that's set and you can see the FCKeditor in the, "Send a Message" screen, when the, "HTML Version" textarea is, you're ready to move on. 
-
-=head3 Step 2: Configure the FCKeditor Filemanager Connector
-
-In this walkthrough, we'll be configuring the, B<php> version of the Filemanager Connector... thingy. There is a version of the connector written in Perl (Dada Mail is written in Perl), but it doesn't seem to work as well. 
-
-We'll be editing B<one> file, located at: 
-
-I<fckeditor/editor/filemanager/connectors/php/config.php>
-
-in the FCKeditor distribution. This is the chunk of code that we'll want to edit: 
-
-	$Config['Enabled'] = false ;
-
-
-	// Path to user files relative to the document root.
-	$Config['UserFilesPath'] = '/userfiles/' ;
-
-	// Fill the following value it you prefer to specify the absolute path for the
-	// user files directory. Useful if you are using a virtual directory, symbolic
-	// link or alias. Examples: 'C:\\MySite\\userfiles\\' or '/root/mysite/userfiles/'.
-	// Attention: The above 'UserFilesPath' must point to the same directory.
-	$Config['UserFilesAbsolutePath'] = '' ;
-
-The first variable: 
-
-	$Config['Enabled'] = false ;
-
-Simply has to be set to, C<true> 
-
-	$Config['Enabled'] = true ;
-
-The second and third variable are looking for the location you want to save any uploaded images to. The second variable wants it in the form of a URL, 
-
-	$Config['UserFilesPath'] = 'http://example.com/userfiles/' ;
-
-One thing to make sure is that you've setup that directory under the same subdomain as your Dada Mail is installed. For example, if Dada Mail is at: 
-
-L<http://www.example.com/cgi-bin/dada/mail.cgi>
-
-You need to hace this directory at something like: 
-
-L<http://www.example.com/userfiles/>
-
-and not, 
-
-L<http://different-subdomain.example.com/userfiles/>
-
-
-The third wants the location of that same directory, but as an absolute server path. 
-
-	$Config['UserFilesAbsolutePath'] = '/home/youraccount/public_html/userfiles/' ;
-
-Make sure to taylor those last two variables to your specific account configuration. 
-
-Other than that, you may have to change the permissions of that directory to, C<777>. 
-
-Once that's all set, uploading images using the FCKeditor should work like a charm. 
-
-=head3 Step 3: Using the FCKeditor Image Upload Capability
-
-Once FCKeditor is all up and running, you can navigate to "Send a Message -> Advanced" (among other places) and get the WYSIWYG editor.
-
-Here's how the "Insert/Edit Image" thingy works:
-
-=over
-
-=item * Click the Insert/Edit Image button, you'll get the, "Image Properties" Window
-
-=item * Click the, "Browse Server" button. 
-
-You'll get this odd, empty file browser looking thing. It doesn't show anything, but you can select an image/whatever on your desktop and upload it to your account.
-
-=item * Click the, "Browse..." button at the bottom of the screen, 
-
-=item * select an image and click, "Upload"
-
-That image will now show up in the file browser! Click on it and the file browser goes away and you get a preview of the image.
-
-=item * Click, "OK" and the image will be inserted into your message.
-
-=back
-
-Now, to have this image be embedded into your newsletter and sent within the image as an attachment, do all these steps, not in the, "Send a Message -> Advanced" screen, but in the, "Send a Webpage" screen:
-
-=over
-
-=item * Check the, "Use the following HTML as content: " option.
-
-=item * Click, "+/- Advanced Options" and select,
-
-B<( Images in this Webpage Should:) "be embedded in the message itself. ">
-
-=back
-
-=head3 See also 
-
-L<http://docs.fckeditor.net/FCKeditor_2.x/Developers_Guide/Configuration/Built_in_File_Browser>
-
-=head2 How do you use TinyMCE with Dada Mail? 
-
-I<(The below instructions work for version 4.9.x of Dada Mail)>
-
-There's no built-in support for TinyMCE, but you may edit Dada Mail's template files to add in support yourself. 
-
-B<Install> TinyMCE. Here's a simple walkthrough:
-
-L<http://www.tinymce.com/wiki.php/%22For_Dummies%22>
-
-B<Edit> the, C<dada/DADA/Template/templates/admin_template.tmpl> file. Add the following lines in the head of the HTML: 
-
-	<script language="javascript" type="text/javascript" src="http://example.com/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
-	<script language="javascript" type="text/javascript">
-		tinyMCE.init({
-			
-	
-					// This is the most important part
-	        		mode : "specific_textareas",
-			        editor_selector : "mceEditor"
-					//
-						
-	
-			        theme : "advanced",
-			        plugins : "autolink,lists,spellchecker,pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template",
-
-			        // Theme options
-			        theme_advanced_buttons1 : "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,|,styleselect,formatselect,fontselect,fontsizeselect",
-			        theme_advanced_buttons2 : "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor",
-			        theme_advanced_buttons3 : "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|,print,|,ltr,rtl,|,fullscreen",
-			        theme_advanced_buttons4 : "insertlayer,moveforward,movebackward,absolute,|,styleprops,spellchecker,|,cite,abbr,acronym,del,ins,attribs,|,visualchars,nonbreaking,template,blockquote,pagebreak,|,insertfile,insertimage",
-			        theme_advanced_toolbar_location : "top",
-			        theme_advanced_toolbar_align : "left",
-			        theme_advanced_statusbar_location : "bottom",
-			        theme_advanced_resizing : true,
-					
-		});
-	</script>	
-
-Make sure to change the URL, C<http://example.com/tinymce/jscripts/tiny_mce/tiny_mce.js> 
-to reflect where your TinyMCE install is located and feel free to customize the options above to your taste. 
-The most important part that you will want to make sure to keep the same is: 
-
-	mode : "specific_textareas",
-	editor_selector : "mceEditor"
-
-B<Edit> the, C<dada/DADA/Template/templates/html_message_form_field_widget.tmpl> file. Change the contents of the file to the below:
-
-	<!-- begin html_message_form_field_widget.tmpl --> 
-	
-	<textarea name="html_message_body" cols="80" rows="30" id="html_message_body" class="mceEditor"><!-- tmpl_var html_message_body_content --></textarea>
-	
-	<!-- end html_message_form_field_widget.tmpl --> 
-
-TinyMCE should now work with Dada Mail in the "Send a Message" and "Send a Webpage" screens. 
-
 
 =head2 How do you install, "CPAN Perl Modules"
 
